Fix crash when entering guidance mode

Do not create a QCheckBox on the stack.

BUG:336771
REVIEW:119069