src/lib/marble/routing/RoutingManager.cpp
@@ -389,14 +389,16 @@ void RoutingManager::setGuidanceModeEnabled( bool enabled )
             text += ' ' + tr( "Please use common sense while navigating." ) + "</p>";
             text += "<p>" + tr( "The Marble development team wishes you a pleasant and safe journey." ) + "</p>";
             QPointer<QMessageBox> messageBox = new QMessageBox( QMessageBox::Information, tr( "Guidance Mode - Marble" ), text, QMessageBox::Ok );
-            QCheckBox showAgain( tr( "Show again" ) );
-            showAgain.setChecked( true );
-            showAgain.blockSignals( true ); // otherwise it'd close the dialog
-            messageBox->addButton( &showAgain, QMessageBox::ActionRole );
-            bool const smallScreen = MarbleGlobal::getInstance()->profiles() & MarbleGlobal::SmallScreen;
+            QCheckBox *showAgain = new QCheckBox( tr( "Show again" ) );
+            showAgain->setChecked( true );
+            showAgain->blockSignals( true ); // otherwise it'd close the dialog
+            messageBox->addButton( showAgain, QMessageBox::ActionRole );
+            const bool smallScreen = MarbleGlobal::getInstance()->profiles() & MarbleGlobal::SmallScreen;
             messageBox->resize( 380, smallScreen ? 400 : 240 );
             messageBox->exec();
-            d->m_guidanceModeWarning = showAgain.isChecked();
+            if ( !messageBox.isNull() ) {
+                d->m_guidanceModeWarning = showAgain->isChecked();
+            }
             delete messageBox;
         }
     } else {
